src/objects/ISSP_Web_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field must be populated when the objective of the log is an account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ISSP Web Service Logs</relationshipLabel>
        <relationshipName>ISSP_Web_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Applied_Change_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Applied Change code</label>
        <referenceTo>Agency_Applied_Change_code__c</referenceTo>
        <relationshipLabel>Callout Web Service Logs</relationshipLabel>
        <relationshipName>Web_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the case that is related with the log.</description>
        <inlineHelpText>Link to the case that is related with the log.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ISSP Web Service Logs</relationshipLabel>
        <relationshipName>ISSP_Web_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ISSP Web Service Logs</relationshipLabel>
        <relationshipName>ISSP_Web_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Input_Description__c</fullName>
        <label>Input Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Login_IP_2__c</fullName>
        <label>Login IP 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Ip__c</fullName>
        <label>Login Ip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISSP_Web_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Service__c</fullName>
        <label>Web Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISSP Web Service Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>Success__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>notEqual</operation>
            <value>IpInfo</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>Success__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>notEqual</operation>
            <value>IpInfo</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BSPlink</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Finished__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>Method__c</columns>
        <columns>System__c</columns>
        <columns>User__c</columns>
        <columns>Web_Service__c</columns>
        <columns>Success__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>contains</operation>
            <value>bsplink</value>
        </filters>
        <label>BSPlink</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Debug_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Input_Description__c</columns>
        <columns>Web_Service__c</columns>
        <columns>System__c</columns>
        <columns>Success__c</columns>
        <columns>Started__c</columns>
        <columns>Method__c</columns>
        <columns>Finished__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>checkIpCountry</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/22/2019 3:00 AM</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>contains</operation>
            <value>Put</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Jean-Claude</value>
        </filters>
        <label>Debug View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISSP_WS_SIS_NewUser</fullName>
        <columns>NAME</columns>
        <columns>Web_Service__c</columns>
        <columns>Success__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Method__c</columns>
        <columns>System__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Web_Service__c</field>
            <operation>equals</operation>
            <value>ISSP_WS_SIS_NewUser</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>ISSP_WS_SIS_NewUser</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>KAVI_logs_Mehdi</fullName>
        <columns>NAME</columns>
        <columns>Web_Service__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Success__c</columns>
        <columns>Started__c</columns>
        <columns>Method__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Web_Service__c</field>
            <operation>equals</operation>
            <value>ISSP_WS_KAVI</value>
        </filters>
        <filters>
            <field>Started__c</field>
            <operation>greaterThan</operation>
            <value>5/23/2017 12:38 PM</value>
        </filters>
        <label>KAVI logs Mehdi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Platform_Events_Helper</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Error_Message__c</columns>
        <columns>Method__c</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>contains</operation>
            <value>Platform Events for</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2020 12:00 AM</value>
        </filters>
        <label>Platform Events Helper</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SAP_syncCustomerWithSAP1</fullName>
        <columns>NAME</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Input_Description__c</columns>
        <columns>Account__c</columns>
        <columns>Method__c</columns>
        <columns>Response__c</columns>
        <columns>Web_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/9/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Web_Service__c</field>
            <operation>contains</operation>
            <value>sap</value>
        </filters>
        <label>SAP syncCustomerWithSAP1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SIS</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Finished__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>Method__c</columns>
        <columns>System__c</columns>
        <columns>User__c</columns>
        <columns>Web_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>contains</operation>
            <value>SIS</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2019 12:00 AM</value>
        </filters>
        <label>SIS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Now</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>Web_Service__c</columns>
        <columns>Success__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Input_Description__c</columns>
        <columns>System__c</columns>
        <columns>Response__c</columns>
        <columns>Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Web_Service__c</field>
            <operation>startsWith</operation>
            <value>callout:ServiceNow</value>
        </filters>
        <label>Service Now</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sidra_Case_Creation_External</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Sidra Case Creation-External</label>
    </listViews>
    <listViews>
        <fullName>Specific_Day</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Finished__c</columns>
        <columns>Input_Description__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>Method__c</columns>
        <columns>Started__c</columns>
        <columns>Success__c</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/2/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>checkIpCountry</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>PlatformEvents_Helper.publishEvents</value>
        </filters>
        <label>Specific Day</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_errors_logs</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Input_Description__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Finished__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>Method__c</columns>
        <columns>Started__c</columns>
        <columns>Success__c</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>checkIpCountry</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Error logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X05_07_2018_logs</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Finished__c</columns>
        <columns>Input_Description__c</columns>
        <columns>Login_Ip__c</columns>
        <columns>Method__c</columns>
        <columns>Started__c</columns>
        <columns>Success__c</columns>
        <columns>System__c</columns>
        <columns>Web_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/10/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>checkIpCountry</value>
        </filters>
        <filters>
            <field>Method__c</field>
            <operation>notEqual</operation>
            <value>PlatformEvents_Helper.publishEvents</value>
        </filters>
        <label>05/07/2018_logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>mgo_BSP</fullName>
        <columns>NAME</columns>
        <columns>Success__c</columns>
        <columns>Error_Message__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>Standards Setting Workspace</value>
        </filters>
        <label>. mgo - kavy today</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAAdmins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WSL-{00000000}</displayFormat>
        <label>ISSP Web Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISSP Web Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>